Project1/config/temp/unpackaged/Demo/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>